trustfall_core/test_data/tests/parse_errors/invalid_transform_supplying_argument_for_abs_op.parse-error.ron
Err(OtherError("Transform argument count mismatch: expected 0 but found 1", Pos(
  line: 5,
  column: 43,
)))
